[tool.poetry]
name = "meteor"
version = "0.1.0"
description = "Mediator pattern, interface inspired by jbogard/MediatR"
authors = ["stnley <64174376+stnley@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/stnley/meteor"
homepage = "https://github.com/stnley/meteor"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.950"
pytest = "^7.1.2"
flake8 = "^4.0.1"
flake8-bugbear = "^22.4.25"
pytest-asyncio = "^0.18.3"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
plugins = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = ["--cov"]

[tool.coverage.run]
source = ["meteor"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
